fixing parts of map that are covered

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,7 +58,9 @@ a {
 
 #map {
   width: 100vw;
-  height: 100vh;
+  height: 90vh;
+  margin-top: 40px;
+  margin-bottom: 66px;
 }
 
 .nav-item {
